fix: fix overflow of popup modals

--- a/src/App.css
+++ b/src/App.css
@@ -97,9 +97,9 @@ a {
   position: absolute;
   top: 0px;
   right: 0px;
-  left: 40vw;
-  height: 70vh;
-  width: 60vw;
+  left: 40%;
+  height: 70%;
+  width: 60%;
   background-color: grey;
   padding-top: 20px;
   text-align: center;
@@ -136,8 +136,8 @@ a {
   left: 0;
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: rgba(64, 64, 64, 0.3);
   text-align: center;
   animation: fadein .5s;
